# AircraftSim

./: .gitignore  AircraftPhysics.cpp  AircraftPhysics.hpp  AircraftPhysicsUnitTests.cpp  CMakeLists.txt  FixedWing.cpp  FixedWing.hpp  FixedWingAerosondeParameters.cpp  FixedWingAerosondeParameters.hpp  FixedWingEMBParameters.cpp  FixedWingEMBParameters.hpp  FixedWingF16Parameters.cpp  FixedWingF16Parameters.hpp  FixedWingMQ9Parameters.cpp  FixedWingMQ9Parameters.hpp  FixedWingMyTwinDreamsParameters.cpp  FixedWingMyTwinDreamsParameters.hpp  FixedWingParameters.hpp  FixedWingParametersUnitTests.cpp  FixedWingPioneerParameters.cpp  FixedWingPioneerParameters.hpp  FixedWingUnitTests.cpp  KeyboardCommandWindow.cpp  KeyboardCommandWindow.hpp  KeyboardCommandWindow.ui  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindowForm.ui  MainWindowFormNew.ui  MainWindowNew.cpp  MainWindowNew.hpp  MathTools.cpp  MathTools.hpp  MathToolsUnitTests.cpp  OSGAircraftWidget.cpp  OSGAircraftWidget.hpp  README.md  UnitTestUtils.cpp  UnitTestUtils.hpp  (+7 more)
command_icons/: command_icons.qrc
fixedwing/F-16D/: F-16D.mtl
resources/fixedwing/EMB_314/: EMB_314.mtl
resources/fixedwing/MQ-9/: MQ-9.mtl
resources/quadcopter/PHANTOM/: Drone.mtl
resources/sky/: Sky.3ds  Sky.mtl
resources/terrain/mountains/: mountain.mtl
resources/wind/: wind.mtl
terrain/city/: Amaryllis_City.3ds  city.3ds
terrain/test/: test.3ds
terrain/warzone/: warzone.3ds
